# shadow-tor-eavesdropping-plugins

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TRACE_PCK_EXAMPLES.md  placeholder.py
Documentation/: TODO.md
Documentation/report/: Makefile  report.tex
Documentation/report/core/: abstract.tex  analisys.tex  bibliog.bib  bibliog.tex  conclusions.tex  future.tex  intro.tex  onion_routing.tex  simulation.tex
Documentation/slides/: Makefile  graphs  slides.nav  slides.tex  slides.toc
Documentation/slides/AAUgraphics/: tor_logo.eps
Documentation/slides/core/: first.tex  second.tex
Documentation/talk/: @  Makefile  slides.nav  slides.tex  slides.toc  ~
Documentation/talk/core/: 11_intro.tex  12_who_involved.tex  13_technologies.tex  21_tor_internals.tex  22_tor_attacks.tex  23_other_approaches.tex  3_backup.tex  bibliog.bib  contermeasures_and_future_works.tex  datagate.tex  methods_and_attacks.tex
analyzer/: CMakeLists.txt  analyzer-plugin.c  analyzer.c  analyzer.h
analyzer/analyzer/: CMakeLists.txt
analyzer/analyzer/src/: Makefile  analyzer-main  analyzer-main.c  analyzer.c  analyzer.h
analyzer/analyzer/src/libOverloading/: shd-library.h
as/: CMakeLists.txt
as/as/: CMakeLists.txt
as/as/src/: as-main.c  as-plugin.c  as.c  as.h
autosys/: CMakeLists.txt  autosys-main.c  autosys-plugin.c  autosys.c  autosys.h  example.xml
examples/minimal/: authority.torrc  client.torrc  exit.torrc  hiddenserver.torrc  relay.torrc  shadow.config.xml
examples/minimal/data/4uthority/: cached-descriptors  cached-descriptors.new  cached-extrainfo.new  cached-microdescs.new  router-stability  state  v3-status-votes
examples/minimal/data/4uthority/keys/: secret_onion_key_ntor
examples/minimal/data/bridge/: cached-descriptors.new  cached-microdesc-consensus  cached-microdescs.new  fingerprint  state
examples/minimal/data/bridge/keys/: secret_id_key  secret_onion_key  secret_onion_key_ntor
examples/minimal/data/exit1/: cached-descriptors.new  cached-microdescs.new  fingerprint  state
examples/minimal/data/exit1/keys/: secret_id_key  secret_onion_key  secret_onion_key_ntor
examples/minimal/data/exit2/: cached-descriptors.new  fingerprint  state
examples/minimal/data/exit2/keys/: secret_id_key  secret_onion_key  secret_onion_key_ntor
examples/minimal/data/fileclient/: cached-microdesc-consensus  cached-microdescs.new  state
examples/minimal/data/relay1/: cached-consensus  cached-descriptors.new  cached-microdescs.new  fingerprint  state
examples/minimal/data/relay1/keys/: secret_id_key  secret_onion_key  secret_onion_key_ntor
examples/minimal/data/relay2/: cached-descriptors.new  fingerprint  state
examples/minimal/data/relay2/keys/: secret_id_key  secret_onion_key  secret_onion_key_ntor
loggerserver/: CMakeLists.txt  README.md  example.xml  loggerserver-main.c  loggerserver.c  loggerserver.h
pynalyzer/: pynalyzer.py
simpleserver/: CMakeLists.txt
simpleserver/simpleserver/: CMakeLists.txt
simpleserver/simpleserver/src/: simpleserver-main.c  simpleserver-plugin.c  simpleserver.c  simpleserver.h
simpletcp/: CMakeLists.txt  simpletcp-main.c  simpletcp.c  simpletcp.h
simpletcp/simpletcp/: CMakeLists.txt
simpletcp/simpletcp/src/: simpletcp-main.c  simpletcp-plugin.c  simpletcp.c  simpletcp.h
tools/: average_and_graph.sh  catcher.py  launcher.sh  merge.sh  net-builder.py  pynalyze_all.sh  pynalyzer.py  simpletcp_analyzer.py
tropeaproxy/: CMakeLists.txt  README.md  example-tor.xml  example.xml  tproxy-main.c  tproxy.c  tproxy.h
udpclient/: CMakeLists.txt
udpclient/udpclient/: CMakeLists.txt
udpclient/udpclient/src/: udpclient-main.c  udpclient-plugin.c  udpclient.c  udpclient.h
